@@ -62,6 +62,7 @@ class Screensaver(xbmcgui.WindowXMLDialog):
         self.switchlimit = 2		
         self.informationtype = 0
         self.weather = 0
+        self.movementtype = int(Addon.getSetting('movementtype'))		
         self.stayinplace = int(Addon.getSetting('stayinplace'))
         self.datef=Addon.getSetting('dateformat')
         self.timef=Addon.getSetting('timeformat')
@@ -96,7 +97,8 @@ class Screensaver(xbmcgui.WindowXMLDialog):
         self.ampm_colorcontrol = self.getControl(30108)
         self.date_colorcontrol = self.getControl(30109)
         self.information_colorcontrol = self.getControl(30111)
-        self.shadow_colorcontrol = self.getControl(30112)	
+        self.shadow_colorcontrol = self.getControl(30112)
+        self.monitor = xbmc.Monitor()
 			
 		#setting up background and slideshow
         if self.slideshowenable == 'false':
@@ -203,12 +205,21 @@ class Screensaver(xbmcgui.WindowXMLDialog):
         self.weathericon = xbmc.getInfoLabel('Window(Weather).Property(Current.FanartCode)')
         self.weathericon_control.setImage(__path__ + "\\resources\\skins\\default\\weathericons\\" + self.weathericonset[int(self.weathericonf)] + "\\" + self.weathericon + ".png")
 		
-		
 		#setting up the time format
         self.timeformat = ['%H','%I','%I']
         if self.timef == '2':
            self.ampm_control.setVisible(True)
         self.time = self.timeformat[int(self.timef)]
+		
+		#setting up movement type and wait timer	
+        if self.movementtype == 0:
+            self.waittimer = 0.5
+            self.multiplier = 2
+        else:
+            self.waittimer = 0.02
+            self.multiplier = 50
+            self.dx = random.choice([-2,2])
+            self.dy = random.choice([-2,2])			
 		
 		#setting up the screen size
         self.screeny = 720 - self.container.getHeight()
@@ -217,7 +228,7 @@ class Screensaver(xbmcgui.WindowXMLDialog):
 		#combining transparency and color
         self.setCTR()
         self.Display()
-        
+		
         self.DisplayTime()
         
     def DisplayTime(self):
@@ -231,15 +242,29 @@ class Screensaver(xbmcgui.WindowXMLDialog):
 		
             #switching information	
             self.Switch()
-		
-            #random movement
-            self.waitcounter += 1			
-            if self.waitcounter == (2*self.stayinplace):
-                new_x = random.randint(0,self.screenx)
-                new_y = random.randint(0,self.screeny)
+
+			#movement
+            if self.movementtype == 0:			
+                #random movement
+                self.waitcounter += 1			
+                if self.waitcounter == (self.multiplier*self.stayinplace):
+                    new_x = random.randint(0,self.screenx)
+                    new_y = random.randint(0,self.screeny)
+                    self.container.setPosition(new_x,new_y)
+                    self.waitcounter = 0
+                    self.setCTR()
+            else:
+                #bounce
+                self.currentposition = self.container.getPosition()
+                new_x = self.currentposition[0]+self.dx
+                new_y = self.currentposition[1]+self.dy
+                if new_x >= self.screenx or new_x <= 0:
+                    self.dx = self.dx*-1
+                    self.setCTR()					
+                if new_y >= self.screeny or new_y <= 0:
+                    self.dy = self.dy*-1
+                    self.setCTR()					
                 self.container.setPosition(new_x,new_y)
-                self.waitcounter = 0
-                self.setCTR()
 
 		    #display time
             self.Display()			
@@ -247,7 +272,7 @@ class Screensaver(xbmcgui.WindowXMLDialog):
 			#slideshow
             if self.slideshowenable == 'true':
                 self.slideshowcounter +=1
-                if self.slideshowcounter == (2*self.imagetimer):
+                if self.slideshowcounter == (self.multiplier*self.imagetimer):
                     if self.randomimages =='true':
                         self.nextfile = random.randint(0,self.number)
                     self.path = self.folder + self.files[self.nextfile]
@@ -260,7 +285,7 @@ class Screensaver(xbmcgui.WindowXMLDialog):
             #refresh weather information every 30 minutes
             if (self.weather == 1 or self.weathericonf != '0'):
                 self.updateweather += 1			
-                if self.updateweather == (3600):
+                if self.updateweather == (self.multiplier*1800):
                     self.temperature = xbmc.getInfoLabel('Weather.Temperature')
                     self.conditions = xbmc.getInfoLabel('Weather.Conditions')
                     self.weathericon = xbmc.getInfoLabel('Window(Weather).Property(Current.FanartCode)')					
@@ -272,7 +297,8 @@ class Screensaver(xbmcgui.WindowXMLDialog):
             else:
                 self.colon_control.setVisible(False)
 
-            xbmc.sleep(500)
+            #xbmc.sleep(500)
+            self.monitor.waitForAbort(self.waittimer)
 			
         if self.abort_requested:
             self.log('Digital Clock abort_requested')
@@ -322,7 +348,7 @@ class Screensaver(xbmcgui.WindowXMLDialog):
         self.colon_control.setLabel(" : ")   			
         self.minute_control.setLabel(datetime.now().strftime("%M"))
         self.ampm_control.setLabel(datetime.now().strftime("%p"))
-        self.date_control.setLabel(self.date)	
+        self.date_control.setLabel(self.date)
         if self.informationtype != 0:
             self.information_control.setLabel(self.information)
         if self.weathericonf != '0': 			
@@ -339,7 +365,7 @@ class Screensaver(xbmcgui.WindowXMLDialog):
         if self.informationtype == 1:
             self.split = xbmc.getInfoLabel('MusicPlayer.Title').split(' (')		
             self.switchcounter += 1
-            if self.switchcounter == (2*self.infoswitch):
+            if self.switchcounter == (self.multiplier*self.infoswitch):
                 self.switch += 1
                 self.switchcounter = 0
                 if self.switch == self.switchlimit:
@@ -352,7 +378,7 @@ class Screensaver(xbmcgui.WindowXMLDialog):
                 self.information = self.temperature + ' - ' + self.conditions			
         elif self.informationtype == 2:
             self.switchcounter += 1		
-            if self.switchcounter == (2*self.infoswitch):
+            if self.switchcounter == (self.multiplier*self.infoswitch):
                 self.switch += 1
                 self.switchcounter = 0
                 if self.switch == self.switchlimit:
@@ -366,7 +392,7 @@ class Screensaver(xbmcgui.WindowXMLDialog):
         elif self.informationtype == 3:
             if self.switchlimit-1 == 2:		
                 self.switchcounter += 1		
-                if self.switchcounter == (2*self.infoswitch):
+                if self.switchcounter == (self.multiplier*self.infoswitch):
                     self.switch += 1
                     self.switchcounter = 0
                     if self.switch == self.switchlimit-1:
@@ -378,7 +404,7 @@ class Screensaver(xbmcgui.WindowXMLDialog):
         elif self.informationtype == 4:
             self.split = xbmc.getInfoLabel('MusicPlayer.Title').split(' - ')			
             self.switchcounter += 1		
-            if self.switchcounter == (2*self.infoswitch):
+            if self.switchcounter == (self.multiplier*self.infoswitch):
                 self.switch += 1
                 self.switchcounter = 0
                 if self.switch == self.switchlimit:
