@@ -1,7 +1,8 @@
 <?xml version="1.0" encoding="utf-8" standalone="yes"?>
 <settings>
     <category label="32001">
-		<setting label="32005" type="slider" id="stayinplace" default="10" range="5,5,60" option="int"/>
+        <setting label="32002" type="enum" id="movementtype" default="0" lvalues="32003|32004"/>	
+		<setting label="32005" type="slider" id="stayinplace" subsetting="true" visible="eq(-1,0)" default="10" range="5,5,60" option="int"/>
 		<setting id="timeformat" type="select" label="32006" default="0" lvalues="32007|32008|32009"/>
 		<setting id="dateformat" type="select" label="32030" default="1" lvalues="32031|32032|32033|32034"/>
 		<setting label="32020" type="bool" id="additionalinformation" default="false"/>
